@@ -1143,7 +1143,7 @@ copy_readlink (WPanel *panel)
 	    concat_dir_and_file (panel->cwd, selection (panel)->fname);
 	int i;
 
-	i = mc_readlink (p, buffer, MC_MAXPATHLEN);
+	i = mc_readlink (p, buffer, MC_MAXPATHLEN - 1);
 	g_free (p);
 	if (i > 0) {
 	    buffer[i] = 0;
